--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link type="text/css" href="css/magic.css" rel="stylesheet">
 
-
+<link rel="icon" href="images/SHARIARHOSAIN.png">
     <link href="css/style.css" rel="stylesheet">
 
     <link type="text/css" href="css/responsive.css" rel="stylesheet">
@@ -22,7 +22,7 @@
 
 
 
-    <title>Hello, world!</title>
+    <title>Creative|| psd</title>
 </head>
 
 <body>
